# ecommerce-product-image-workflow

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  index.html  llms.txt  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: index.md
docs/en/: compliance.md  contributing.md  faq.md  mvp-cli.md  quality-gate.md  quickstart.md  web-workbench.md  workflow.md
docs/zh-CN/: README.md
docs/zh-CN/reference/: 00-项目概览.md  01-需求与范围-Phase1图片.md  02-输出清单与版式规范.md  03-工作流方案-端到端.md  04-模板-规格图与说明图.md  05-质检与验收清单.md  06-风险与合规.md  07-经理操作手册-EN.md  08-经理操作手册-RU.md  09-输入采集表单-经理填写.md  10-样例集与素材索引.md  11-风格包-StylePacks.md  12-经理指令模板-EN-RU.md  13-版本与变更记录.md  14-经理一键生成-操作卡片.md  15-常见问题与退回处理.md  16-默认配置-一键生成.md  17-供应商图最小要求.md  18-导出与交付-经理版.md  19-生成批次记录-经理填写.md  README.md
ecommerce_product_image_workflow/: __init__.py  web.py
ecommerce_product_image_workflow/backend/: app.py  db.py  rendering.py
ecommerce_product_image_workflow/providers/: __init__.py  base.py  generic_http.py  hosted.py  local_mock.py  registry.py
en/compliance/: index.html
en/contributing/: index.html
en/faq/: index.html
en/mvp-cli/: index.html
en/quality-gate/: index.html
en/quickstart/: index.html
en/web-workbench/: index.html
en/workflow/: index.html
examples/: products_minimum.csv  sample_product_input.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
mvp_image_workflow/: __init__.py  batch.py  cli.py  generator.py  io_csv.py  reporting.py  stylepacks.py  util.py  validator.py
prompts/: manager_generate_en.txt  manager_generate_ru.txt
search/: search_index.json
templates/: batch_record.csv  manager_input_form.csv  qa_checklist.csv  style_packs.example.json
tests/: test_mvp_image_workflow.py  test_web_workbench.py
zh-CN/: index.html
zh-CN/reference/: index.html
zh-CN/reference/00-项目概览/: index.html
zh-CN/reference/01-需求与范围-Phase1图片/: index.html
zh-CN/reference/02-输出清单与版式规范/: index.html
zh-CN/reference/03-工作流方案-端到端/: index.html
zh-CN/reference/04-模板-规格图与说明图/: index.html
zh-CN/reference/05-质检与验收清单/: index.html
zh-CN/reference/06-风险与合规/: index.html
zh-CN/reference/07-经理操作手册-EN/: index.html
zh-CN/reference/08-经理操作手册-RU/: index.html
zh-CN/reference/09-输入采集表单-经理填写/: index.html
zh-CN/reference/10-样例集与素材索引/: index.html
zh-CN/reference/11-风格包-StylePacks/: index.html
zh-CN/reference/12-经理指令模板-EN-RU/: index.html
zh-CN/reference/13-版本与变更记录/: index.html
zh-CN/reference/14-经理一键生成-操作卡片/: index.html
zh-CN/reference/15-常见问题与退回处理/: index.html
zh-CN/reference/16-默认配置-一键生成/: index.html
zh-CN/reference/17-供应商图最小要求/: index.html
zh-CN/reference/18-导出与交付-经理版/: index.html
zh-CN/reference/19-生成批次记录-经理填写/: index.html
