[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-product-image-workflow"
version = "0.2.0"
description = "Open-source AI e-commerce product image workflow with CSV templates, prompt packages, QA review, a Python CLI, and a local FastAPI/React workbench."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "tytsxai" }
]
keywords = [
  "ecommerce",
  "ecommerce-product-images",
  "ai-images",
  "ai-image-generation",
  "ai-product-photography",
  "product-photography",
  "supplier-images",
  "workflow",
  "workflow-automation",
  "prompt-engineering",
  "quality-assurance",
  "fastapi",
  "react"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Office/Business"
]

[project.urls]
Homepage = "https://github.com/tytsxai/ecommerce-product-image-workflow"
Documentation = "https://tytsxai.github.io/ecommerce-product-image-workflow/"
Issues = "https://github.com/tytsxai/ecommerce-product-image-workflow/issues"

[project.scripts]
ecommerce-image-workflow = "mvp_image_workflow.cli:main"
ecommerce-image-workbench = "ecommerce_product_image_workflow.web:main"

[project.optional-dependencies]
web = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "python-multipart>=0.0.9",
  "pillow>=10.0",
  "httpx>=0.27"
]

[tool.setuptools]
packages = [
  "mvp_image_workflow",
  "ecommerce_product_image_workflow",
  "ecommerce_product_image_workflow.backend",
  "ecommerce_product_image_workflow.providers"
]
