[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-product-image-workflow"
version = "0.2.0"
description = "Open-source, model-agnostic AI product photography workflow for e-commerce teams: CSV intake, style packs, prompt packages, QA review, a Python CLI, and a local FastAPI/React workbench."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "tytsxai" }
]
keywords = [
  "ecommerce",
  "ecommerce-product-images",
  "e-commerce-product-image-workflow",
  "ai-images",
  "ai-image-generation",
  "ai-product-photography",
  "ai-product-image-workflow",
  "product-photography",
  "supplier-images",
  "supplier-image-transformation",
  "product-image-qa",
  "qa-checklist",
  "batch-manifest",
  "workflow",
  "workflow-automation",
  "local-workbench",
  "prompt-engineering",
  "quality-assurance",
  "fastapi",
  "fastapi-react",
  "react"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Office/Business"
]

[project.urls]
Homepage = "https://github.com/tytsxai/ecommerce-product-image-workflow"
Documentation = "https://tytsxai.github.io/ecommerce-product-image-workflow/"
Repository = "https://github.com/tytsxai/ecommerce-product-image-workflow"
Issues = "https://github.com/tytsxai/ecommerce-product-image-workflow/issues"
Changelog = "https://github.com/tytsxai/ecommerce-product-image-workflow/blob/main/CHANGELOG.md"

[project.scripts]
ecommerce-image-workflow = "mvp_image_workflow.cli:main"
ecommerce-image-workbench = "ecommerce_product_image_workflow.web:main"

[project.optional-dependencies]
web = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.27,<1.0",
  "python-multipart>=0.0.9",
  "pillow>=10.0",
  "httpx>=0.27"
]

[tool.setuptools]
packages = [
  "mvp_image_workflow",
  "ecommerce_product_image_workflow",
  "ecommerce_product_image_workflow.backend",
  "ecommerce_product_image_workflow.providers"
]
